src/test/MethodBodies/MethodBodies.expected
error: MethodBodies.panda:4:5: abstract method extraBody() may not have a method body
error: MethodBodies.panda:8:5: non-abstract method noBody() must have a method body
2 errors
