src/test/MethodBodies/MethodBodies.panda
@abstract
class MethodBodies {
    @abstract
    method extraBody() {
        Console.writeLine("I'm broken!")
    }

    method noBody()

    @class
    method main() {
        Console.writeLine("You definitely shouldn't see this")
    } 
}